# iris

./: .gitignore  DESIGN.md  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
examples/: fastapi_app.py
iris/: __init__.py  _pytest.py  assets.py  core.py  html.py  testing.py  theme.py
iris/ask/: __init__.py
iris/components/: __init__.py  charts.py  data.py  feedback.py  forms.py  icons.py  layout.py  nav.py  overlay.py  surfaces.py
iris/gallery/: __init__.py  __main__.py  build.py  demos.py  frameworks.py
iris/integrations/: __init__.py  fastapi.py
iris/static/: iris-ask.js  iris-fixi.js  iris-plot.js  iris-test.js  iris.css
tests/: test_ask.py  test_ask_page.py  test_charts.py  test_components.py  test_core.py  test_data_feedback.py  test_demos.py  test_examples.py  test_fixtures.py  test_frameworks_page.py  test_gallery.py  test_graph.py  test_integration_fastapi.py  test_nav.py  test_overlay_icons.py  test_pytest_page.py  test_testing.py
